--- a/style.css
+++ b/style.css
@@ -40,12 +40,27 @@ nav{
     align-items: center;
     padding: 1vw 8vw;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
+    z-index: 999;
 }
 
 nav img{
     width: 100px;
     height: 60px;
     cursor: pointer;
+}
+
+nav .navigation{
+    display: flex;
+}
+
+#menu-btn{
+    width: 30px;
+    height: 30px;
+    display: none;
+}
+
+#menu-close{
+    display: none;
 }
 
 nav .navigation ul{
@@ -176,7 +191,7 @@ nav .navigation ul li a:hover{
 /* Courses */
 
 #course{
-    padding: 8vw 8vw 0 8vw;
+    padding: 8vw 8vw 8vw 8vw;
     text-align: center;
 }
 
@@ -312,7 +327,7 @@ nav .navigation ul li a:hover{
 /*Experts*/
 
 #experts{
-    padding: 8vw 8vw 0 8vw;
+    padding: 8vw 8vw 8vw 8vw;
     text-align: center;
 }
 
@@ -439,4 +454,46 @@ footer .copyright .pro-links i{
 footer .copyright .pro-links i:hover{
     background-color: #FDC938;
     color: #2c2c2c;
+}
+
+@media (max-width: 769px) {
+    nav{
+        padding: 15px 20px;
+    }
+    nav img{
+        width: 130px;
+    }
+    #menu-btn{
+        display: initial;
+        font-size: 1.6rem;
+        color: #fff;
+        padding: 30px 0 20px 20px;
+    }
+    
+    #menu-close{
+        display: initial;
+        font-size: 1.6rem;
+    }
+    nav .navigation ul{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 220;
+        height: 100vh;
+        background: rgba(17, 20, 104, 0.45);
+        backdrop-filter: blur(4.5px);
+        border: rgba(255, 255, 255, 0.18);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    nav .navigation ul li{
+        padding: 20px 0 20px 40px;
+        margin-left: 0;
+    }
+    nav .navigation ul li a{
+        color: #fff;
+    }
+    
 }
