--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ nav .navigation ul li a:hover{
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   text-align: center;
    padding-top: 40px;
 }
 
@@ -456,6 +457,67 @@ footer .copyright .pro-links i:hover{
     background-color: #FDC938;
     color: #2c2c2c;
 }
+
+/* About */
+
+#about-home{
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url("images/home-cover.jpg");
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: center; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+ }
+
+ #about-home h2{
+    color: #fff;
+    font-size: 2.2rem;
+    letter-spacing: 1px;
+ }
+ #about-container{
+    display: flex;
+    align-items: center;
+    padding: 8vw 8vw 2vw 8vw;
+ }
+
+ #about-container .about-img{
+    width: 60%;
+    
+ }
+
+ #about-container .about-text{
+    width: 40%;
+    padding: 60px;
+ }
+
+ #about-container .about-text h2{
+    color: #686F7A;
+    font-weight: 300;
+ }
+
+ #about-container .about-text .about-fe{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+ }
+
+ #about-container .about-text .about-fe img{
+    width: 50px;
+    background-size: cover;
+    background-position: center;
+ }
+
+
+ #about-container .about-text p{
+    color: #293038;
+    padding-bottom: 15px;
+ }
+
 
 @media (max-width: 769px) {
     nav{
