Working on About

--- a/style.css
+++ b/style.css
@@ -487,12 +487,15 @@ footer .copyright .pro-links i:hover{
 
  #about-container .about-img{
     width: 60%;
-    
+    padding-right: 60px; 
+ }
+
+ #about-container .about-img img{
+    width: 100%; 
  }
 
  #about-container .about-text{
     width: 40%;
-    padding: 60px;
  }
 
  #about-container .about-text h2{
@@ -504,12 +507,14 @@ footer .copyright .pro-links i:hover{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    margin-top: 30px;
  }
 
  #about-container .about-text .about-fe img{
     width: 50px;
     background-size: cover;
     background-position: center;
+    margin-right: 20px;
  }
 
 
@@ -518,6 +523,32 @@ footer .copyright .pro-links i:hover{
     padding-bottom: 15px;
  }
 
+ #about-container .about-text .about-fe .fe-text{
+    width: 90%;
+
+ }
+
+ #about-container .about-text .about-fe .fe-text h5{
+    font-size: 16px;
+    color: #686F7A;
+ }
+
+ #trust{
+    text-align: center;
+    padding: 8vw;
+ }
+
+ #trust .trust-img{
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+ #trust .trust-img img{
+    width: 90px;
+    height: auto;
+ }
 
 @media (max-width: 769px) {
     nav{
@@ -592,6 +623,21 @@ footer .copyright .pro-links i:hover{
     footer .copyright .pro-links{
         margin-top: 15px;
     }
+
+    /* About */
+
+    #about-container{
+        padding: 8vw 4vw 2vw 4vw;
+    }
+
+    #about-container .about-img{
+        padding-right: 30px;
+    }
+
+    #trust .trust-img img{
+        width: 50px;
+        height: auto;
+    }
     
 }
 
@@ -612,4 +658,42 @@ footer .copyright .pro-links i:hover{
         margin-top: 20px;
         margin-bottom: 20px;
     }
+
+    /*About*/
+
+    #about-container{
+        flex-direction: column-reverse;
+    }
+
+    #about-container .about-img{
+        width: 100%;
+        padding-right: 0px;
+    }
+
+    #about-container .about-text{
+        width: 100%;
+        padding-bottom: 20px;
+    }
+
+    #trust .trust-img{
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    #trust .trust-img img{
+        width: 60px;
+        margin: 10px 15px;
+        height: auto;
+    }
+}
+
+@media (max-width: 376px) {
+    footer input {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
 }
