Working on Blog section

--- a/style.css
+++ b/style.css
@@ -550,6 +550,63 @@ footer .copyright .pro-links i:hover{
     height: auto;
  }
 
+ /* Blog */
+
+#blog-container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 8vw;
+}
+
+#blog-container .blogs{
+    width: 60%;
+    border-radius: 19px;
+}
+
+#blog-container .blogs img{
+    width: 100%;
+}
+
+#blog-container .blogs .post{
+    padding-bottom: 60px;
+}
+
+#blog-container .blogs .post h3{
+    color: #293038;
+    padding: 15px 0 10px 0;
+}
+
+#blog-container .blogs .post p{
+    color: #757373;
+    padding-bottom: 20px;
+}
+
+#blog-container .blogs .post a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    color: #fff;
+    padding: 13px 35px;
+    background-color: rgb(21, 21, 100);
+    border-radius: 5px;
+    font-weight: 600;
+}
+
+#blog-container .cate{
+    width: 30%;
+}
+
+#blog-container .cate h2{
+    padding-bottom: 7px;
+}
+
+#blog-container .cate a{
+    text-decoration: none;
+    color: #757373;
+    font-weight: 500;
+    line-height: 45px;
+}
+
 @media (max-width: 769px) {
     nav{
         padding: 15px 20px;
@@ -638,6 +695,12 @@ footer .copyright .pro-links i:hover{
         width: 50px;
         height: auto;
     }
+
+    /* Blog */
+
+    #blog-container{
+        padding: 8vw 4vw;
+    }
     
 }
 
@@ -687,8 +750,21 @@ footer .copyright .pro-links i:hover{
         margin: 10px 15px;
         height: auto;
     }
-}
 
+    /* Blog */
+
+    #blog-container{
+        flex-direction: column;
+    }
+    
+    #blog-container .blogs{
+        width: 100%;
+    }
+
+    #blog-container .cate{
+        width: 100%;
+    }
+}
 @media (max-width: 376px) {
     footer input {
         width: 100%;
@@ -696,4 +772,3 @@ footer .copyright .pro-links i:hover{
     }
 }
 
-}
